<resources>
    <string name="app_name">Home Bank</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sampleText">sampleText</string>
    <string name="sampleNumber">8000</string>
    <string name="budget">budget</string>
    <string name="spent">spent</string>
    <string name="balance">balance</string>
    <string name="plan">plan</string>
    <string name="fact">fact</string>
    <string name="add">add</string>
    <string name="menu">menu</string>
    <string name="profits">profits</string>
    <string name="planned">planned</string>
    <string name="postponed">postpound</string>
    <string name="bought">bought</string>
    <string name="properties">properties</string>
    <string name="closePeriod">closePeriod</string>
    <string name="clearPeriod">clearPeriod</string>
    <string name="exitFromProfile">exitFromProfile</string>
    <string name="nameOfPurchase">Name</string>
    <string name="price">price</string>
    <string name="count">count</string>
    <string name="amount">amount</string>
    <string name="notNecessary">Not necessary</string>
    <string name="description">description</string>
    <string name="repeater">repeater</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="cancelButton">Cancel</string>
    <string name="noItIsNot">no</string>
    <string name="yesItIs">yes</string>
    <string name="ok" />
    <string name="budgetIncreased">budget Increased</string>
    <string name="budgetIncreasedMessage">budgetIncreasedMessage</string>
    <string name="active">active</string>
    <string name="notActive">not Active</string>
    <string name="daughterPurchase">" daughter Purchase"</string>
    <string name="nameOfProfit">Name</string>
    <string name="date">Date</string>
    <string name="received">Receive</string>
    <string name="cancelled">cancelled</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>